tests/should-fail/active-fragments/ex1.fk
-- #desc   [Choice, Choice, Choice] and [Choice, Choice] need not be unified anymore since it suffices that their active fragments are unifiable
-- #return cannot unify abilities [£ | Choice , Choice] (line 15 , column 33) and [£ | Choice , Choice , Choice] (line 15 , column 33)

data Bool = true | false
interface Choice = choice : Bool

not : {Bool -> Bool}
not true  = false
not false = true

negChoice: {<Choice>X -> [Choice]X}
negChoice <choice -> k> = negChoice (k (not choice!))
negChoice x = x

doubleNegChoice: {<Choice>X -> [Choice]X}
doubleNegChoice <m> = negChoice (negChoice m!)
doubleNegChoice x = x

main: {[E|]Unit}
main! = unit
